--- a/appspec.yml
+++ b/appspec.yml
@@ -13,22 +13,22 @@ permissions:
 
 hooks:
   ApplicationStop:
-    - location: scripts/deploy/application_stop.sh
+    - location: scripts/application_stop.sh
       timeout: 60
       runas: ec2-user
   beforeInstall:
-    - location: scripts/deploy/before_install.sh
+    - location: scripts/before_install.sh
       timeout: 60
       runas: ec2-user
   AfterInstall:
-    - location: scripts/deploy/after_install.sh
+    - location: scripts/after_install.sh
       timeout: 60
       runas: ec2-user
   ApplicationStart:
-    - location: scripts/deploy/application_start.sh
+    - location: scripts/application_start.sh
       timeout: 60
       runas: ec2-user
   ValidateService:
-    - location: scripts/deploy/validate_service.sh
+    - location: scripts/validate_service.sh
       timeout: 60
       runas: ec2-user
