--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,8 @@
     "operator-linebreak": 0,
     "antfu/if-newline": 0,
     "vue/singleline-html-element-content-newline": 0,
-    "vue/html-self-closing": 0
+    "vue/html-self-closing": 0,
+    "@typescript-eslint/no-unused-vars": 0,
+    "@typescript-eslint/comma-dangle": 0
   }
 }
