--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "nuxt dev --https --ssl-cert ssl-cert.pem --ssl-key ssl-key.pem",
+    "dev:http": "nuxt dev",
     "dev:dev": "cross-env DEPLOY_ENV=dev nuxt dev --https --ssl-cert ssl-cert.pem --ssl-key ssl-key.pem",
     "dev:qa": "cross-env DEPLOY_ENV=qa nuxt dev --https --ssl-cert ssl-cert.pem --ssl-key ssl-key.pem",
     "dev:prod": "cross-env DEPLOY_ENV=prod nuxt dev --https --ssl-cert ssl-cert.pem --ssl-key ssl-key.pem",
