--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
     "vue/singleline-html-element-content-newline": 0,
     "vue/html-self-closing": 0,
     "@typescript-eslint/no-unused-vars": 0,
-    "@typescript-eslint/comma-dangle": 0
+    "@typescript-eslint/comma-dangle": 0,
+    "@typescript-eslint/brace-style": 0,
   }
 }
