--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.7",
     "@pinia/nuxt": "^0.4.6",
+    "@vuelidate/core": "^2.0.0",
+    "@vuelidate/validators": "^2.0.0",
     "@vueuse/core": "^9.8.2",
     "@vueuse/nuxt": "^9.8.2",
     "cross-env": "^7.0.3",
