--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nuxtjs/tailwindcss": "^6.1.3",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.8",
+    "@types/lodash-es": "^4.17.6",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.30.0",
     "jest": "^29.3.1",
@@ -44,7 +45,8 @@
     "@vueuse/core": "^9.8.2",
     "@vueuse/nuxt": "^9.8.2",
     "cross-env": "^7.0.3",
-    "joi": "^17.8.1"
+    "joi": "^17.8.1",
+    "lodash-es": "^4.17.21"
   },
   "description": "nuxt3와 tailwindcss로 만들어진 관리자사이트 템플릿",
   "author": "leetaegyu (https://blog.yookidz.site)",
