--- a/package.json
+++ b/package.json
@@ -16,12 +16,22 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.34.0",
     "@nuxt/test-utils": "^3.0.0",
     "@nuxtjs/tailwindcss": "^6.1.3",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-essentials": "7.0.0-rc.3",
+    "@storybook/addon-interactions": "7.0.0-rc.3",
+    "@storybook/addon-links": "7.0.0-rc.3",
+    "@storybook/blocks": "^7.0.0-rc.3",
+    "@storybook/testing-library": "^0.0.14-next.1",
+    "@storybook/vue3": "7.0.0-rc.3",
+    "@storybook/vue3-vite": "^7.0.0-rc.3",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.8",
     "@types/lodash-es": "^4.17.6",
@@ -32,6 +42,7 @@
     "postcss": "^8.4.20",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
+    "storybook": "7.0.0-rc.3",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4",
     "vite-plugin-eslint": "^1.8.1",
