--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build:dev": "cross-env DEPLOY_ENV=dev nuxt build",
     "build:qa": "cross-env DEPLOY_ENV=qa nuxt build",
     "build:prod": "cross-env DEPLOY_ENV=prod nuxt build",
+    "build:lamba": "cross-env DEPLOY_ENV=dev NITRO_PRESET=aws-lambda nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
@@ -20,28 +21,27 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.34.0",
     "@nuxt/test-utils": "^3.0.0",
-    "@nuxtjs/tailwindcss": "^6.1.3",
+    "@nuxtjs/tailwindcss": "^6.7.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.8",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.30.0",
     "jest": "^29.3.1",
-    "nuxt": "3.0.0",
+    "nuxt": "3.5.1",
     "postcss": "^8.4.20",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
-    "tailwindcss": "^3.2.4",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.9.4",
     "vite-plugin-eslint": "^1.8.1",
     "vue-tsc": "^1.0.18"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.7",
-    "@pinia/nuxt": "^0.4.6",
+    "@pinia/nuxt": "^0.4.11",
     "@vueuse/core": "^9.8.2",
     "@vueuse/nuxt": "^9.8.2",
-    "cross-env": "^7.0.3",
-    "lit-tailwind": "^0.0.3"
+    "cross-env": "^7.0.3"
   },
   "description": "nuxt3와 tailwindcss로 만들어진 관리자사이트 템플릿",
   "author": "leetaegyu (https://blog.yookidz.site)",
