--- a/package.json
+++ b/package.json
@@ -24,25 +24,28 @@
     "@antfu/eslint-config": "^0.34.0",
     "@nuxt/test-utils": "^3.0.0",
     "@nuxtjs/tailwindcss": "^6.1.3",
-    "@storybook/addon-actions": "^6.5.16",
-    "@storybook/addon-essentials": "7.0.0-rc.3",
-    "@storybook/addon-interactions": "7.0.0-rc.3",
-    "@storybook/addon-links": "7.0.0-rc.3",
-    "@storybook/blocks": "^7.0.0-rc.3",
-    "@storybook/testing-library": "^0.0.14-next.1",
-    "@storybook/vue3": "7.0.0-rc.3",
-    "@storybook/vue3-vite": "^7.0.0-rc.3",
+    "@storybook/addon-actions": "^7.0.18",
+    "@storybook/addon-essentials": "7.0.18",
+    "@storybook/addon-interactions": "7.0.18",
+    "@storybook/addon-links": "7.0.18",
+    "@storybook/blocks": "^7.0.18",
+    "@storybook/testing-library": "^0.1.0",
+    "@storybook/vue3": "7.0.18",
+    "@storybook/vue3-vite": "^7.0.18",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.8",
     "@types/lodash-es": "^4.17.6",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.30.0",
+    "eslint-plugin-storybook": "^0.6.12",
     "jest": "^29.3.1",
     "nuxt": "3.2.3",
     "postcss": "^8.4.20",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
-    "storybook": "7.0.0-rc.3",
+    "storybook": "7.0.18",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4",
     "vite-plugin-eslint": "^1.8.1",
@@ -72,5 +75,10 @@
     "node": "18.12.1",
     "npm": "8.19.2",
     "pnpm": ">=7.15.0"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
